styling fixes - no white space

--- a/style.css
+++ b/style.css
@@ -7,16 +7,18 @@ body{
     /* margin: -20%; */
     background: url("./img/mountain.jpg");
     background-size: cover;
-    height: 100vh;
+    height: 100%;
     text-align: center;
+    padding: 5%;
+    padding-bottom: 10%;
 }
   
 .inner{
-    margin: 5% 10% 0 10%;
+    margin: 0 10% 0 10%;
     background-color: rgba(0,0,0,0.8);
     padding: 10%;
     border-radius: 15px;
-    color: white
+    color: white;
   }
 
 .spacer{
@@ -53,6 +55,11 @@ p{
         width: 75%;
         font-size: 1.3em;
     }
+
+    .wrapper{
+        height: 100vh;
+        padding:0;
+    }
 }
 
 @media only screen and (min-width: 1000px) {
@@ -60,6 +67,10 @@ p{
         width: 50%;
         font-size: 1.3em;
       }
+
+    .wrapper{
+        height: 100%;
+    }
 }
 
 .mailchimp{
